# projetos-claude

./: 00-INDEX.txt  ANALISTA_SUGESTOES.md  ESTRATEGIA_SEGURANCA_COMPLETA.md  MELHORIAS_AGENTE_SEGURANCA_V2.md  ORQUESTRADOR_MULTIPROJETOS.md  ORQUESTRADOR_REVISAO_DIARIA.md  README_AGENTES.md  README_ATIVAR_AGENTES.md  README_GITHUB_ACTIONS.md  README_ORQUESTRADOR.md  README_SCHEDULER.md  README_SUGESTOES.md  RESUMO_SEGURANCA_EXECUTIVO.md  SISTEMA_AGENTES.md  SUGESTOES_COMPLEMENTOS_SISTEMA.md  agente_seguranca_avancado.py  agente_seguranca_avancado_v2.py  analisador_sugestoes.py  ativar_scheduler.bat  ativar_scheduler_agentes.bat  executar_orquestrador.sh  fazer_commit_github_actions.bat  orquestrador_agentes.py  orquestrador_multiprojetos.py  scheduler_agentes_diario.py  scheduler_analise_diaria.py  setup_git_automatico.bat
.claude/: settings.local.json
01-SMB-OS/: .env.example  .gitignore  PROJETO.txt  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json  vercel.json
01-SMB-OS/apps/api/: main.py  pyproject.toml  render.yaml  requirements.txt
01-SMB-OS/apps/api/app/core/: config.py
01-SMB-OS/apps/api/app/core/services/: composicao_service.py  estoque_service.py  item_service.py
01-SMB-OS/apps/api/app/db/: base.py
01-SMB-OS/apps/api/app/db/models/: __init__.py  audit.py  auth.py  composicao.py  estoque.py  item.py  rbac.py  tenant.py  user.py
01-SMB-OS/apps/api/app/routes/: health.py
01-SMB-OS/apps/api/scripts/: generate_keys.py
02-Mence-Design/: PROJETO.txt
03-Morning-Briefing/: PROJETO.txt
04-Tax-Deed-Finder/: .dockerignore  (+8 more)
(+610 files in other folders)
